--- a/src/template.html
+++ b/src/template.html
@@ -20,6 +20,10 @@
 
     <div class="octotree_views">
       <div class="octotree_view octotree_treeview current">
+        <div class="octoprime_links">
+          <span>Test</span>
+        </div>
+
         <div class="octotree_view_header"></div>
         <div class="octotree_view_body"></div>
       </div>
