--- a/src/template.html
+++ b/src/template.html
@@ -18,12 +18,17 @@
       <span></span>
     </a>
 
+    <div class="octoprime_links">
+      <a class="octoprime_links_browse" href="javascript:void(0)">
+        <span>Browse</span>
+      </a>
+      <a class="octoprime_links_contribute" href="javascript:void(0)">
+        <span>Contribute</span>
+      </a>
+    </div>
+
     <div class="octotree_views">
       <div class="octotree_view octotree_treeview current">
-        <div class="octoprime_links">
-          <span>Test</span>
-        </div>
-
         <div class="octotree_view_header"></div>
         <div class="octotree_view_body"></div>
       </div>
@@ -41,6 +46,12 @@
           </div>
           <div class="error"></div>
         </form>
+      </div>
+
+
+      <div class="octotree_view octotree_issues_view">
+        <div class="octotree_view_header"></div>
+        <div class="octotree_view_body"></div>
       </div>
 
       <div class="octotree_view octotree_optsview">
