--- a/src/template.html
+++ b/src/template.html
@@ -19,10 +19,10 @@
     </a>
 
     <div class="octoprime_links">
-      <a class="octoprime_links_browse" href="javascript:void(0)">
+      <a class="octoprime_links_link octoprime_links_browse octoprime_links_act" href="javascript:void(0)">
         <span>Browse</span>
       </a>
-      <a class="octoprime_links_contribute" href="javascript:void(0)">
+      <a class="octoprime_links_link octoprime_links_contribute" href="javascript:void(0)">
         <span>Contribute</span>
       </a>
     </div>
