bunch of link updates

--- a/src/template.html
+++ b/src/template.html
@@ -7,7 +7,7 @@
       <div class="popup">
         <div class="arrow"></div>
         <div class="content">
-          Octotree is enabled on this page. Click this button or press
+          Octoprime is enabled on this page. Click this button or press
           <kbd>cmd shift s</kbd> (or <kbd>ctrl shift s</kbd>)
           to show it.
         </div>
@@ -42,7 +42,7 @@
           </div>
           <div>
             <button type="submit" class="btn">Save</button>
-            <a href="https://github.com/buunguyen/octotree#access-token" target="_blank" tabIndex="-1">Why is this required?</a>
+            <a href="https://github.com/adhityan/octotree#access-token" target="_blank" tabIndex="-1">Why is this required?</a>
           </div>
           <div class="error"></div>
         </form>
@@ -59,7 +59,7 @@
         <form class="octotree_view_body">
           <div>
             <label>Site access token</label>
-            <a class="octotree_help" href="https://github.com/buunguyen/octotree#settings" target="_blank" tabIndex="-1">
+            <a class="octotree_help" href="https://github.com/adhityan/octotree#settings" target="_blank" tabIndex="-1">
               <span></span>
             </a>
             <input type="text" data-store="TOKEN" data-perhost="true">
