add new issue + counter completed

--- a/src/template.html
+++ b/src/template.html
@@ -24,6 +24,7 @@
       </a>
       <a class="octoprime_links_link octoprime_links_contribute" href="javascript:void(0)">
         <span>Contribute</span>
+        <span class="octoprime_links_contribute_counter"></span>
       </a>
     </div>
 
